--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -158,42 +158,41 @@
 
 <hr class="contact-form-divider">
 
-<form action="/action_page.php" class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
+<form method="post" action="{% url 'contact' %}" class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
+  {% csrf_token %}
 
-<h2 class="w3-center">Contact Us</h2>
-
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
+  <h2 class="w3-center">Contact Us</h2>
+  
+  <div class="w3-row w3-section">
+    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
     <div class="w3-rest">
-      <input class="w3-input w3-border" name="first" type="text" placeholder="Name">
+      <input class="w3-input w3-border" name="contactName" type="text" placeholder="Name">
     </div>
-</div>
+  </div>
 
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
+  <div class="w3-row w3-section">
+    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
     <div class="w3-rest">
-      <input class="w3-input w3-border" name="email" type="text" placeholder="Email">
+      <input class="w3-input w3-border" name="contactEmail" type="text" placeholder="Email">
     </div>
-</div>
+  </div>
 
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
+  <div class="w3-row w3-section">
+    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
     <div class="w3-rest">
-      <input class="w3-input w3-border" name="phone" type="text" placeholder="Phone">
+      <input class="w3-input w3-border" name="contactPhone" type="text" placeholder="Phone">
     </div>
-</div>
+  </div>
 
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-pencil"></i></div>
+  <div class="w3-row w3-section">
+    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-pencil"></i></div>
     <div class="w3-rest">
-      <input class="w3-input w3-border" name="message" type="text" placeholder="Message">
+      <input class="w3-input w3-border" name="contactMessage" type="text" placeholder="Message">
     </div>
-</div>
+  </div>
 
-<button class="w3-button w3-block w3-section w3-blue w3-ripple w3-padding">Send</button>
-
+  <button class="w3-button w3-block w3-section w3-blue w3-ripple w3-padding">Send</button>
 </form>
-
 
 <hr class="contact-form-divider">
 
