add company signup

--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -46,6 +46,9 @@
               <a class="nav-link" href="{% url 'signup' %}">Signup<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'company-signup' %}">Company Signup<span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'coach:index' %}">Coaches</a>
             </li>
             <li class="nav-item">
