--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -109,7 +109,8 @@
         <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
           <br>
             <p class="text-center lead" style="font-weight:700;color:#34495c">Sign up for our upcoming demo!</p>
-             <form method="POST" action="">
+            <form method="POST" action="{% url 'personal-contact' %}">
+              {% csrf_token %}
               <div class="form-group">
                 <center>
             <input type="email" name='email' class="form-control" id="email" style="width:70%;" placeholder="Your Email" required>
