--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -72,16 +72,16 @@
         <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
           <br>
             <p class="text-center lead" style="font-weight:700;color:#34495c">Leave a message</p>
-             <form>
-
+            <form method="POST" action="{% url 'leave-message' %}">
+              {% csrf_token %}
               <div class="form-group">
                 <center>
-            <input type="text" name='name' class="form-control" placeholder="Name" id="name" style="width:70%;" required>
+            <input type="text" name="name" class="form-control" placeholder="Name" id="name" style="width:70%;" required>
                 </center>
               </div>
 
            <div class="form-group"><center>
-            <input type="email" name='email' class="form-control" id="email" style="width:70%;" placeholder="Email" required>
+            <input type="email" name="email" class="form-control" id="email" style="width:70%;" placeholder="Email" required>
             </center></div>
 
            <div class="form-group"><center>
