--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -24,8 +24,8 @@
 
 <nav class="navbar navbar-default navbar-fixed-top nav-color">
   <div class="container-fluid">
-<a href="#" id="corner-ad" data-toggle="modal" data-target="#demo" class="visible-xs xx">
-<img src="{% static 'icon/demo.png' %}" id="yy" title="Signup" width="200" height="200"/>
+<a href="#" id="corner-ad2" data-toggle="modal" data-target="#demo" class="visible-xs zz">
+<img src="{% static 'icon/demo.png' %}" id="ff" title="Signup" width="200" height="200"/>
 </a>
     <div class="navbar-header" id="ButtonForScroll">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="margin-right: 130px;">
@@ -33,8 +33,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="/" style="width: 50%;">
-        <img alt="Brand" src="{% static 'icon/logo.png' %}" style="width: 28%;margin-top: -10px;">
+      <a class="navbar-brand" href="/">
+        <img alt="Brand" src="{% static 'icon/logo.png' %}" class="img-responsive" style="width:50px;margin-top: -5px;">
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -42,7 +42,7 @@
 
       </ul>
       <div class="container">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right" style="margin-right: 60px;">
           {% if user.is_authenticated %}
               <li>
                 <a href="{% url 'userprofile:profile-detail' user.id %}">{{ user.username }}</a>
@@ -55,7 +55,7 @@
           <li><a href=""></a></li>
       </ul>
       <!-- <div id="trydemo"></div> -->
-      <a href="#" id="corner-ad" data-toggle="modal" data-target="#demo" class="hidden-xs xx">
+      <a href="#" id="corner-ad" data-toggle="modal" data-target="#demo" class="xx">
         <img src="{% static 'icon/demo.png' %}" id="yy" title="Signup" width="200" height="200"/>
       </a>
 
@@ -70,6 +70,7 @@
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
+          <button type="button" class="close" data-dismiss="modal" style="color: #f00;font-weight: bold;margin-top: -16px;font-size: 26px;">&times;</button>
           <br>
             <p class="text-center lead" style="font-weight:700;color:#34495c">Leave a message</p>
             <form method="POST" action="{% url 'leave-message' %}">
@@ -107,6 +108,7 @@
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
+          <button type="button" class="close" data-dismiss="modal" style="color: #f00;font-weight: bold;margin-top: -16px;font-size: 26px;">&times;</button>
           <br>
             <p class="text-center lead" style="font-weight:700;color:#34495c">Sign up for our upcoming demo!</p>
             <form method="POST" action="{% url 'personal-contact' %}">
@@ -144,6 +146,7 @@
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
+          <button type="button" class="close" data-dismiss="modal" style="color: #f00;font-weight: bold;margin-top: -16px;font-size: 26px;">&times;</button>
           <br>
             <p class="text-center lead" style="font-weight:700;color:#34495c">Schedule a free Pilot for your company!</p>
             <form method="POST" action="{% url 'company-contact' %}">
@@ -185,7 +188,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="pull-right" id="ButtonForScroll"><a href="#page-top" id="back_to_top_link">Back to top</a></p>
-        <p>&copy; 2017 TalkMeUp, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2017 TalkMeUp, Inc.</a></p>
       </footer>
 
     </main>
@@ -193,19 +196,20 @@
     <script>
 
       window.onload = function(){
-        $('body').scrollspy({target: ".navbar", offset: 50});  
-
         $(window).scroll(function() {
             var start = $("#presentation-interview").offset().top;
             var stop = $("#talkmeup-about").offset().top;
 
             if ($(window).scrollTop() >= start && $(window).scrollTop() <= stop) {
-                $('.xx').attr('data-target','#new');
-                $('#yy').attr('src','{% static 'icon/pilot.png' %}');
-                
+              $('#yy').attr('src','{% static 'icon/pilot.png' %}');
+              $('.xx').attr('data-target','#new');
+              $('#ff').attr('src','{% static 'icon/pilot.png' %}');
+              $('.zz').attr('data-target','#new');  
             }else{
               $('#yy').attr('src','{% static 'icon/demo.png' %}');
               $('.xx').attr('data-target','#demo');
+              $('#ff').attr('src','{% static 'icon/demo.png' %}');
+              $('.zz').attr('data-target','#demo');
             }
         });
 
@@ -243,7 +247,7 @@
             });
           }
         });
-
+        console.clear();
 
 
       // Add smooth scrolling on all links inside the navbar
@@ -253,7 +257,7 @@
           var hash = this.hash;
           $('html, body').animate({
             scrollTop: $(hash).offset().top
-          }, 1000, function(){
+          }, 500, function(){
             // window.location.hash = "?";
           });
         } 
