--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -14,11 +14,10 @@
   </div>
   <br>
   <div class="row">
-    <div class="col-sm-4 col-sm-offset-4">
-        <video width="100%" controls >
-    <source src="{% static 'video/promo.mp4' %}" type="video/mp4">
-    Your browser does not support HTML5 video.
-  </video>
+    <div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+      <video width="100%" controls=true>
+        <source src="{% static 'video/promo.mp4' %}" type="video/mp4">
+      </video>
     </div>
   </div>
   <br>
@@ -37,21 +36,21 @@
 </section>
 </div>
 <div class="container">
-<section id="why-talkmeup">
-        <div class="col-sm-8 col-sm-offset-2">
-          <h1 class="text-center" style="font-size: 5.6rem;font-weight: 700; color: #34495c; margin-top: 100px;">
-             Why TalkMeUp
-          </h1>
-          <br>
-          <br>
-          <center>
-          <div class="col-sm-4">
+  <section id="why-talkmeup">
+    <div class="col-sm-10 col-sm-offset-1">
+	    <h1 class="text-center" style="font-size: 5.6rem;font-weight: 700; color: #34495c; margin-top: 80px;">
+        Why TalkMeUp
+      </h1>
+      <br>
+      <br>
+      <center>
+        <div class="col-sm-4">
             <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Accessible</h2>
             <img src="{% static 'icon/accessible.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
             <br>
-            <p style="font-size: 18px;">TalkMeUp is at your service <span style="color:#EEC15E">24/7</span> </p>
+            <p style="font-size: 18px;">Your Just-in-time coach</p>
           </div>
 
           <div class="col-sm-4">
@@ -60,7 +59,7 @@
             <br>
             <br>
             <br>
-            <p style="font-size: 18px;"><span style="color:#EEC15E">Personalized </span>coaching that drives progress</p>
+            <p style="font-size: 18px;">Personalized coaching to drive progress</p>
           </div>
           <div class="col-sm-4">
             <h2 style="font-size: 2.8rem;font-weight:700; margin-bottom:25px; color: #34495c">Affordable</h2>
@@ -85,15 +84,16 @@
     </center>
 
 <div class="container">
-<section id="presentation-interview">
-        <div class="col-sm-8 col-sm-offset-2" style="margin-top: 100px">
+  <section id="presentation-interview">
+    <div class="col-sm-10 col-sm-offset-1" style="margin-top: 100px">
+      
           <center>
           <div class="col-sm-4">
             <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Presentation</h2>
             <img src="{% static 'icon/presentationdark.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
-            <p style="font-size: 15px;">A good presentation is all about your audience.Learn how your content and delivery should satisfy the audience's decision criteria and help you gain their buy-in.</p>
+            <p style="font-size: 15px;">A good presentation satisfies your audience and helps you gain buy-in.</p>
           </div>
 
           <div class="col-sm-4">
@@ -101,14 +101,14 @@
             <img src="{% static 'icon/interviewdark.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
-            <p style="font-size: 15px;">Interviewers don't care too much about your stories, but your skills and thought process.More importantly, your personality traits! Learn how you should delivery your value properly.</p>
+            <p style="font-size: 15px;">Delivering your value properly gets you in the door.</p>
           </div>
           <div class="col-sm-4">
             <h2 style="font-size: 2.8rem;font-weight:700; margin-bottom:25px; color: #34495c">Leadership</h2>
             <img src="{% static 'icon/leadership.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
-            <p style="font-size: 15px;">What makes a good leader? Learn How you can be the one that peple want to trust and follow.</p>
+            <p style="font-size: 15px;">Show your team that you are the one to trust and follow.</p>
           </div>
           </center>
         </div>
@@ -126,10 +126,10 @@
     </center>
 
 <div class="container" id="pilot">
-<section id="talkmeup-about">
-        <div class="col-sm-6 col-sm-offset-3" style="margin-top: 100px">
+  <section id="talkmeup-about">
+    <div class="col-sm-10 col-sm-offset-2" style="margin-top: 100px">
           <center>
-          <div class="col-sm-6">
+          <div class="col-sm-4">
             <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Employee</h2>
             <img src="{% static 'icon/employeelight.png' %}" class="img-responsive" style="width: 70%;">
             <br>
@@ -137,12 +137,12 @@
             <p style="font-size: 15px;">TalkMeUp equips every employee with a smart coach that is always available on his/her mobile device.</p>
           </div>
 
-          <div class="col-sm-6">
+          <div class="col-sm-4 col-sm-offset-2">
             <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Company</h2>
             <img src="{% static 'icon/company.png' %}" class="img-responsive" style="width: 70%;">
             <br>
             <br>
-            <p style="font-size: 15px;">TalkMeUp is easily tailored for enterprises. it provides analytical support to make employee development adaptable, measurable and manageable.Save 90% of training cost while yielding 3X better results.</p>
+            <p style="font-size: 15px;">TalkMeUp can be easily tailored for enterprises. It provides analytical support to make employee development adaptable, measurable and manageable.</p>
           </div>
           </center>
         </div>
