--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -8,7 +8,7 @@
     <div class="col-sm-8 col-sm-offset-2 home_image">
       {% load static %}
       <center>
-      <img src="{% static 'icon/logo-dark.png' %}" class="img-responsive" width="80%" height="auto">
+      <img src="{% static 'icon/logo-dark.png' %}" class="img-responsive" width="80%" height="auto" style="margin-top:50px">
       </center>
       </div>
   </div>
