add facebook share button.

--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -20,6 +20,13 @@
       </video>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
+      <div class="fb-share-button" data-href="http://talkmeup.co" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Ftalkmeup.co%2F&amp;src=sdkpreparse">Share</a></div>
+    </div>
+    <div class="col-sm-4"></div>
+  </div>
   <br>
   <div class="row">
     <div class="col-sm-2"></div>
