remove wechat signup.

--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -138,7 +138,7 @@
               <div class="text-center">
                 <a href="{% url 'social:begin' 'facebook' %}"><img style="width: 32px;" src="{% static 'icon/facebook.png' %}"></a>
                 <a href="{% url 'social:begin' 'twitter' %}"><img style="width: 32px;" src="{% static 'icon/twitter.png' %}"></a>
-                <a href="{% url 'social:begin' 'weibo' %}"><img style="width: 30px;" src="{% static 'icon/wechat.png' %}"></a>
+                <!-- <a href="{% url 'social:begin' 'weibo' %}"><img style="width: 30px;" src="{% static 'icon/wechat.png' %}"></a> -->
                 <a href="{% url 'social:begin' 'google-oauth2' %}"><img style="width: 30px;" src="{% static 'icon/google.png' %}"></a>
               </div>
               <br>
