--- a/talkmeup/static/style.css
+++ b/talkmeup/static/style.css
@@ -78,6 +78,12 @@ a:link, a:visited, a:focus, a:active {
   margin-top: 30px;
 }
 
+.hook{
+  margin-right: 5%;
+  font-size: 20px;
+  color: #EEC153;
+}
+
 /* Changes the position of the indicators */
 #quote-carousel .carousel-indicators 
 {
