--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -206,6 +206,11 @@
           <br>
           <br>
         </div>
+        <!-- Carousel Buttons Next/Prev -->
+        <center>
+          <a data-slide="prev" href="#quote-carousel" class="hook"><i class="fa fa-chevron-left"></i></a>
+          <a data-slide="next" href="#quote-carousel" style="font-size: 15px;color:#EEC153"><i class="fa fa-chevron-right"></i></a>
+        </center> 
       </div>                          
     </div>
     </div>
