update facebook share og properties.

--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- For Facebook -->
+    <meta property="og:title" content="TalkMeUp -- Succeed through Better Communication" />
+    <meta property="og:image" content="http://talkmeup.co/static/icon/logo.png" />
+    <meta property="og:url" content="http://talkmeup.co/" />
+    <meta property="og:description" content="TalkMeUp is an AI coach that gives you on-demand and personalized coaching on your communication skills at 1/100th the cost of world’s best coaches!" />
+
+
     <title>TalkMeUp -- Powers up Your Success through Better Communication.</title>
 
     <!-- Bootstrap CSS -->
