--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -198,7 +198,7 @@
               </button>
               </center>
               </form> 
-              <p class="text-center" style="color:#34495c;margin-top: 10px;">We will contact you within 5 business day</p>
+              <p class="text-center" style="color:#34495c;margin-top: 10px;">We will contact you within 5 business days</p>
               <br>
           </div>
       </div>
