--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -8,13 +8,13 @@
     <div class="col-sm-8 col-sm-offset-2 home_image">
       {% load static %}
       <center>
-      <img src="{% static 'icon/logo-dark.png' %}" class="img-responsive" width="80%" height="auto" style="margin-top:50px">
+      <img src="{% static 'icon/logo-dark.png' %}" class="img-responsive" width="60%" height="auto" style="margin-top:50px">
       </center>
       </div>
   </div>
   <br>
   <div class="row">
-    <div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
+    <div class="col-sm-6 col-sm-offset-3">
       <video loop autoplay controls="true" width="100%" height="100%" src="{% static 'video/promo.mp4' %}" type="video/mp4"></video>
     </div>
   </div>
