--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -15,7 +15,7 @@
   <br>
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
-      <video loop autoplay controls="true" width="100%" height="100%" src="{% static 'video/promo.mp4' %}" type="video/mp4"></video>
+      <video loop autoplay controls="true" controlsList="nodownload" width="100%" height="100%" src="{% static 'video/promo.mp4' %}" type="video/mp4"></video>
     </div>
   </div>
   <br>
