--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -144,47 +144,60 @@
 
         <div class="carousel-inner" style="font-size: 16px;">
           <div class="item active">
-              <div class="row">
-                <div class="col-sm-12">
-                  <center>
+            <div class="row">
+              <div class="col-sm-1">
+                <a data-slide="prev" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-left"></i></a>
+              </div>
+              <div class="col-sm-10">
+                <center>
                   <p>“We piloted TalkMeUp in my Management Presentations class, improving class participation by 5X. Further, students who used TalkMeUp are maintaining their presentation skills at a higher level after the course when compared with those who relied on less robust forms of feedback."</p>
                   <small>--Prof. Ron Placone</small>
                   <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
-                  </center>
-                </div>
+                </center>
               </div>
+              <div class="col-sm-1">
+                <a data-slide="next" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-right"></i></a>
+              </div>
+            </div>
         
           </div>
           <div class="item">
-              <div class="row">
-                <div class="col-sm-12">
-                  <center>
+            <div class="row">
+              <div class="col-sm-1">
+                <a data-slide="prev" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-left"></i></a>
+              </div>
+              <div class="col-sm-10">
+                <center>
                   <p>"we piloted TalkMeUp in my Management Presentation class, improving class participation rate by 5X. And we see the students who used TalkMeUp maintain their presentation skills at a higher level after the semester,compared with those who didn't."</p>
                   <small>--Prof. Ron Placone</small>
                   <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
-                  </center>
-                </div>
+                </center>
               </div>
+              <div class="col-sm-1">
+                <a data-slide="next" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-right"></i></a>
+              </div>
+            </div>
           </div>
           <div class="item">
-              <div class="row">
-                <div class="col-sm-12">
-                  <center>
+            <div class="row">
+              <div class="col-sm-1">
+                <a data-slide="prev" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-left"></i></a>
+              </div>
+              <div class="col-sm-10">
+                <center>
                   <p>"we piloted TalkMeUp in my Management Presentation class, improving class participation rate by 5X. And we see the students who used TalkMeUp maintain their presentation skills at a higher level after the semester,compared with those who didn't."</p>
                   <small>--Prof. Ron Placone</small>
                   <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
-                  </center>
-                </div>
+                </center>
               </div>
+              <div class="col-sm-1">
+                <a data-slide="next" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-right"></i></a>
+              </div>
+            </div>
           </div>
           <br>
           <br>
         </div>
-        <!-- Carousel Buttons Next/Prev -->
-        <center>
-          <a data-slide="prev" href="#quote-carousel" class="hook"><i class="fa fa-chevron-left"></i></a>
-          <a data-slide="next" href="#quote-carousel" style="font-size: 15px;color:#EEC153"><i class="fa fa-chevron-right"></i></a>
-        </center> 
       </div>                          
     </div>
     </div>
