fix modal popup position

--- a/talkmeup/templates/base.html
+++ b/talkmeup/templates/base.html
@@ -82,7 +82,7 @@
 
 
 <!-- contact -->
-  <div class="modal fade" id="contact" role="dialog" data-keyboard="false" data-backdrop="static">
+  <div class="modal fade" id="contact" role="dialog" data-keyboard="false" data-backdrop="static" style="top:15%;">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
@@ -118,7 +118,7 @@
   </div>
 
   <!-- share -->
-  <div class="modal fade" id="share" role="dialog" data-keyboard="false" data-backdrop="static">
+  <div class="modal fade" id="share" role="dialog" data-keyboard="false" data-backdrop="static" style="top:35%;">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
@@ -140,7 +140,7 @@
 
 
 <!-- Sign up for our upcoming demo! -->
-  <div class="modal fade" id="demo" role="dialog" data-keyboard="false" data-backdrop="static">
+  <div class="modal fade" id="demo" role="dialog" data-keyboard="false" data-backdrop="static" style="top:20%;">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
@@ -178,7 +178,7 @@
 
 
 <!-- Schedule a free Pilot for your company! -->
-  <div class="modal fade" id="pilot" role="dialog" data-keyboard="false" data-backdrop="static">
+  <div class="modal fade" id="pilot" role="dialog" data-keyboard="false" data-backdrop="static" style="top:25%;">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-body" style="background-color:#EEC15E;padding: 6%;">
