fix slide button.

--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -131,10 +131,16 @@
 <br>
 
 <section id="testmonial">
-  <div class='row' style="background-color:#ecddb9;margin-right: auto;margin-left: auto;margin-top: 100px;">
+  <div class="row" style="background-color:#ecddb9;margin-right: auto;margin-left: auto;margin-top: 100px;">
     <br>
     <br>
-    <div class='col-md-offset-3 col-md-6'>
+    <div class="col-md-3">
+      <center>
+        <br><br><br><br>
+        <a data-slide="prev" href="#quote-carousel" style="color:grey;font-size:30px;"><i class="fa fa-chevron-left"></i></a>
+      </center>
+    </div>
+    <div class="col-md-6">
       <div class="carousel slide" data-ride="carousel" id="quote-carousel">
         <ol class="carousel-indicators">
           <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
@@ -144,63 +150,39 @@
 
         <div class="carousel-inner" style="font-size: 16px;">
           <div class="item active">
-            <div class="row">
-              <div class="col-sm-1">
-                <a data-slide="prev" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-left"></i></a>
-              </div>
-              <div class="col-sm-10">
-                <center>
-                  <p>“We piloted TalkMeUp in my Management Presentations class, improving class participation by 5X. Further, students who used TalkMeUp are maintaining their presentation skills at a higher level after the course when compared with those who relied on less robust forms of feedback."</p>
-                  <small>--Prof. Ron Placone</small>
-                  <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
-                </center>
-              </div>
-              <div class="col-sm-1">
-                <a data-slide="next" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-right"></i></a>
-              </div>
-            </div>
+            <center>
+              <p>“We piloted TalkMeUp in my Management Presentations class, improving class participation by 5X. Further, students who used TalkMeUp are maintaining their presentation skills at a higher level after the course when compared with those who relied on less robust forms of feedback."</p>
+              <small>--Prof. Ron Placone</small>
+              <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
+            </center>
         
           </div>
           <div class="item">
-            <div class="row">
-              <div class="col-sm-1">
-                <a data-slide="prev" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-left"></i></a>
-              </div>
-              <div class="col-sm-10">
-                <center>
-                  <p>"we piloted TalkMeUp in my Management Presentation class, improving class participation rate by 5X. And we see the students who used TalkMeUp maintain their presentation skills at a higher level after the semester,compared with those who didn't."</p>
-                  <small>--Prof. Ron Placone</small>
-                  <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
-                </center>
-              </div>
-              <div class="col-sm-1">
-                <a data-slide="next" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-right"></i></a>
-              </div>
-            </div>
+            <center>
+              <p>"we piloted TalkMeUp in my Management Presentation class, improving class participation rate by 5X. And we see the students who used TalkMeUp maintain their presentation skills at a higher level after the semester,compared with those who didn't."</p>
+              <small>--Prof. Ron Placone</small>
+              <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
+            </center>
           </div>
           <div class="item">
-            <div class="row">
-              <div class="col-sm-1">
-                <a data-slide="prev" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-left"></i></a>
-              </div>
-              <div class="col-sm-10">
-                <center>
-                  <p>"we piloted TalkMeUp in my Management Presentation class, improving class participation rate by 5X. And we see the students who used TalkMeUp maintain their presentation skills at a higher level after the semester,compared with those who didn't."</p>
-                  <small>--Prof. Ron Placone</small>
-                  <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
-                </center>
-              </div>
-              <div class="col-sm-1">
-                <a data-slide="next" href="#quote-carousel" style="color:grey;"><i class="fa fa-chevron-right"></i></a>
-              </div>
-            </div>
+            <center>
+              <p>"we piloted TalkMeUp in my Management Presentation class, improving class participation rate by 5X. And we see the students who used TalkMeUp maintain their presentation skills at a higher level after the semester,compared with those who didn't."</p>
+              <small>--Prof. Ron Placone</small>
+              <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
+            </center>
           </div>
           <br>
           <br>
         </div>
       </div>                          
     </div>
+    <div class="col-md-3">
+      <center>
+        <br><br><br><br>
+        <a data-slide="next" href="#quote-carousel" style="color:grey;font-size:30px;"><i class="fa fa-chevron-right"></i></a>
+        </center>
     </div>
+  </div>
 </section>
 
 
