--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -72,7 +72,7 @@
 <div class="container">
   <section id="presentation-interview">
     <div class="col-sm-10 col-sm-offset-1" style="margin-top: 100px">
-      
+
           <center>
           <div class="col-sm-4">
             <h2 style="font-size: 2.8rem;font-weight: 700; margin-bottom:25px; color: #34495c">Presentation</h2>
@@ -134,7 +134,7 @@
   <div class="row" style="background-color:#ecddb9;margin-right: auto;margin-left: auto;margin-top: 100px;">
     <br>
     <br>
-    <div class="col-md-3">
+    <div class="col-md-3" style="visibility:hidden">
       <center>
         <br><br><br><br>
         <a data-slide="prev" href="#quote-carousel" style="color:grey;font-size:30px;"><i class="fa fa-chevron-left"></i></a>
@@ -142,12 +142,6 @@
     </div>
     <div class="col-md-6">
       <div class="carousel slide" data-ride="carousel" id="quote-carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
-          <li data-target="#quote-carousel" data-slide-to="1"></li>
-          <li data-target="#quote-carousel" data-slide-to="2"></li>
-        </ol>
-
         <div class="carousel-inner" style="font-size: 16px;">
           <div class="item active">
             <center>
@@ -155,28 +149,13 @@
               <small>--Prof. Ron Placone</small>
               <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
             </center>
-        
-          </div>
-          <div class="item">
-            <center>
-              <p>"we piloted TalkMeUp in my Management Presentation class, improving class participation rate by 5X. And we see the students who used TalkMeUp maintain their presentation skills at a higher level after the semester,compared with those who didn't."</p>
-              <small>--Prof. Ron Placone</small>
-              <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
-            </center>
-          </div>
-          <div class="item">
-            <center>
-              <p>"we piloted TalkMeUp in my Management Presentation class, improving class participation rate by 5X. And we see the students who used TalkMeUp maintain their presentation skills at a higher level after the semester,compared with those who didn't."</p>
-              <small>--Prof. Ron Placone</small>
-              <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
-            </center>
           </div>
           <br>
           <br>
         </div>
-      </div>                          
+      </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3" style="visibility:hidden">
       <center>
         <br><br><br><br>
         <a data-slide="next" href="#quote-carousel" style="color:grey;font-size:30px;"><i class="fa fa-chevron-right"></i></a>
