--- a/talkmeup/static/style.css
+++ b/talkmeup/static/style.css
@@ -1,342 +1,207 @@
-/* GLOBAL STYLES
--------------------------------------------------- */
-html {
-  height: 100%;
-  margin: 0;
-  font: 400 15px/1.8 "Lato", sans-serif;
-  color: #777;
+body {
+  padding-top: 70px;
+  padding-bottom: 30px;
+  background-color: #F2F3F4;
+  position: relative; 
+}
+.LandingPage {
+  min-height: 750px;
 }
 
-
-h3 {
-  letter-spacing: 1.5px;
-  font-family: "Lato", sans-serif;
-  text-align: center;
-  color: #FFF;
-}
-
-/* NAVIGATION BAR
--------------------------------------------------- */
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 3px 3px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* INTRO, DEMO, PERSONAL, COMPANY PAGE
--------------------------------------------------- */
-.introPage, .demoPage, .personalPage, .companyPage {
-  position: relative;
-/*  opacity: 0.65;*/
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-}
-.introPage {
-  background-image: linear-gradient(
-                     rgba(20,20,20, .5), 
-                     rgba(20,20,20, .5)),
-                     url("BGImg/introImg.jpg");
-
-  min-height: 800px;
-}
-
-.demoPage {
-  background-image: url("BGImg/demoImg.jpg");
-  min-height: 700px;
-}
-
-.personalPage {
-  background-image: url("BGImg/personalTrainingImg.png");
-  min-height: 700px;
-}
-
-.companyPage {
-  background-image: url("BGImg/companyTrainingImg.png");
-  min-height: 700px;
-}
-
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1024px) {
-    .introPage, .demoPage, .personalPage, .companyPage {
-        background-attachment: scroll;
-    }
-}
-
-
-
-/* REQUEST DEMO BUTTON 
--------------------------------------------------- */
-.requestDemoButton {
-  border-radius: 4px;
-  background-color: #5c85d6;
-  border: none;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 15px;
-  padding: 10px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  display: block;
-  margin: 0 auto;
-}
-
-.requestDemoButton span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.requestDemoButton span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.requestDemoButton:hover span {
-  padding-right: 25px;
-}
-
-.requestDemoButton:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-
-
-
-/* PERSONAL & COMPANY CARDS 
--------------------------------------------------- */
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 90%;
-  margin: auto;
-  text-align: center;
-  font-family: arial;
-  margin-top: 35px;
-}
-
-.companyCard {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 90%;
-  margin: auto;
-  text-align: center;
-  font-family: arial;
-  margin-top: 35px;
+.WhyTalkMeUp {
   background-color: white;
+  min-height: 700px;
+}
+.PersonalTrain {
+  min-height: 700px;
 }
 
-.title {
-  color: black;
-  font-size: 18px;
+.CompanyTrain {
+  background-color: white;
+  min-height: 730px;
+}
+.testmonial {
+  background-color: yellow;
+  min-height: 700px;
 }
 
-button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-}
-
-a {
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
-}
-
-button:hover, a:hover {
-  opacity: 0.7;
-}
-
-
-/* POPUP SIGNUP WINDOW 
--------------------------------------------------- */
-
-/* Full-width input fields */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
-
-/* Extra styles for the cancel button */
-.cancelbtn {
-    background-color: #f44336;
-}
-
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn,.signupbtn {float:left;width:50%}
-
-/* Add padding to container elements */
-.container {
-    padding: 16px;
-}
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
+#trydemo { 
+ 	width: 0; 
+ 	height: 0; 
+ 	border-top: 100px solid #EEC153; 
+ 	border-left: 100px solid transparent;
+ 	position: absolute;
+    z-index: 101;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    padding-top: 60px;
+    right: 0;
+
+
+ 	 }
+
+.nav-color{
+    background-color: white;
+	  border-bottom: 2px solid #34495c;
 }
 
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+#corner-ad {
+  display: block;
+  width: 190px;
+  height: 200px;
+  background: green;
+  position: absolute;
+  top: -107px;
+  right: -98px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  box-shadow: 0px 1px 1px 1px #51373766;
 }
 
-/* The Close Button (x) */
-.close {
-    position: absolute;
-    right: 35px;
-    top: 15px;
-    color: #000;
-    font-size: 40px;
-    font-weight: bold;
+#corner-ad2 {
+  display: none;
+  width: 190px;
+  height: 200px;
+  background: green;
+  position: absolute;
+  top: -107px;
+  right: -98px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  box-shadow: 0px 1px 1px 1px #51373766;
 }
 
-.close:hover,
-.close:focus {
-    color: red;
-    cursor: pointer;
+a:link, a:visited, a:focus, a:active {
+	outline: none;
 }
 
-/* Clear floats */
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
+
+
+/* carousel */
+#quote-carousel 
+{
+  padding: 0 10px 30px 10px;
+  margin-top: 30px;
 }
 
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
-       width: 100%;
+/* Control buttons  */
+#quote-carousel .carousel-control
+{
+  background: none;
+  color: #222;
+  font-size: 2.3em;
+  text-shadow: none;
+  margin-top: 30px;
+}
+
+.hook{
+  margin-right: 5%;
+  font-size: 20px;
+  color: #EEC153;
+}
+
+/* Changes the position of the indicators */
+#quote-carousel .carousel-indicators 
+{
+  right: 50%;
+  top: auto;
+  bottom: -45px;
+  margin-right: -19px;
+}
+/* Changes the color of the indicators */
+#quote-carousel .carousel-indicators li 
+{
+  background: #EEC153;
+}
+#quote-carousel .carousel-indicators .active 
+{
+  background: #333333;
+}
+#quote-carousel img
+{
+  width: 250px;
+  height: 100px
+}
+/* End carousel */
+
+.item blockquote {
+    border-left: none; 
+    margin: 0;
+}
+
+.item blockquote img {
+    margin-bottom: 10px;
+}
+
+.item blockquote p:before {
+    content: "\f10d";
+    font-family: 'Fontawesome';
+    float: left;
+    margin-right: 10px;
+}
+
+
+
+/**
+  MEDIA QUERIES
+*/
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+    #quote-carousel 
+    {
+      margin-bottom: 0;
+      padding: 0 40px 30px 40px;
+    }
+    
+}
+
+/* Small devices (tablets, up to 768px) */
+@media (max-width: 768px) { 
+    
+    /* Make the indicators larger for easier clicking with fingers/thumb on mobile */
+    
+    #quote-carousel .carousel-indicators {
+        bottom: -45px !important;  
+    }
+    #quote-carousel .carousel-indicators li {
+        display: inline-block;
+        margin: 0px 5px;
+        width: 10px;
+        height: 10px;
+    }
+
+    #corner-ad{
+        display: none;
+    }
+    #corner-ad2{
+        display: block;
     }
 }
 
-
-
-/* SLIDESHOW 
--------------------------------------------------- */
-* {box-sizing:border-box}
-body {font-family: Verdana,sans-serif;margin:0}
-.mySlides {display:none}
-
-.slideshow-container {
-  max-width: cover;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-    
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  text-align: center;
-  font-size: 20px;
-    
-  color: black;
-  padding: 8px 12px;
-
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+/* Change the direction of the transition. */
+@media all and (transform-3d), (-webkit-transform-3d) {
+  .carousel-inner > .item.next,
+  .carousel-inner > .item.active.right {
+    left: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+  .carousel-inner > .item.prev,
+  .carousel-inner > .item.active.left {
+    left: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
 }
 
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
-
-.top-left {
-  position: absolute;
-  top: 20%;
-  top: 20%;
-  left: 10%;
-  text-align: left;
-  color: black;
-  font-size: 25px;
-}
-
-.right {
-  position: absolute;
-  top: 70%;
-  left: 25%;
-  text-align: right;
-  color: black;
-  font-size: 25px;
+.scrl{
+  animation: arrow 4.3s steps(103) infinite;
+  background: url(https://quicksight.aws/_media/images/backgrounds/scroll-indicator-dark_63a68fad8.png) 0 0;
+  display: inline-block;
+  height: 45px;
+  width: 30px;
 }
