change promo video to Youtube

--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -16,9 +16,13 @@
   <br>
 
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
-      <video loop autoplay controls="true" controlsList="nodownload" width="100%" height="100%" src="{% static 'video/promo.mp4' %}" type="video/mp4"></video>
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_kaglYLpOq0?autoplay=1&loop=1&playlist=_kaglYLpOq0&mute=1"></iframe>
+      </div>
     </div>
+    <div class="col-sm-3"></div>
   </div>
   <br>
   <br>
@@ -80,7 +84,7 @@
   <section id="presentation-interview">
     <div class="col-sm-10 col-sm-offset-1" style="margin-top: 0px">
       <h1 class="text-center" style="font-size: 5.6rem;font-weight: 600; color: #34495c; margin-top: 80px;">
-        What Do We Offer 
+        What Do We Offer
       </h1>
       <br>
       <br>
@@ -120,11 +124,11 @@
   <section id="talkmeup-about">
       <div class="col-sm-10 col-sm-offset-1" style="margin-top: 0px">
       <h1 class="text-center" style="font-size: 5.6rem;font-weight: 600; color: #34495c; margin-top: 80px;">
-        What Do We Offer 
+        What Do We Offer
       </h1>
       <br>
       <br>
-      <br>    
+      <br>
       </div>
       <div class="col-sm-10 col-sm-offset-2" style="margin-top: 0px">
           <center>
@@ -174,7 +178,7 @@
               <br>
               </center>
               </div>
-              <div class="carousel-inner" style="font-size: 16px;">         
+              <div class="carousel-inner" style="font-size: 16px;">
               <center>
               <p>Faculty Lead for the Accelerate Leadership Center at the Tepper School of Business, Carnegie Mellon University</p>
             </center>
