--- a/talkmeup/templates/home.html
+++ b/talkmeup/templates/home.html
@@ -84,7 +84,7 @@
   <section id="presentation-interview">
     <div class="col-sm-10 col-sm-offset-1" style="margin-top: 0px">
       <h1 class="text-center" style="font-size: 5.6rem;font-weight: 600; color: #34495c; margin-top: 80px;">
-        What Do We Offer
+        For Consumers
       </h1>
       <br>
       <br>
@@ -124,7 +124,7 @@
   <section id="talkmeup-about">
       <div class="col-sm-10 col-sm-offset-1" style="margin-top: 0px">
       <h1 class="text-center" style="font-size: 5.6rem;font-weight: 600; color: #34495c; margin-top: 80px;">
-        What Do We Offer
+        For Enterprises
       </h1>
       <br>
       <br>
